--- a/src/features/Authenticator/Authenticator.scss
+++ b/src/features/Authenticator/Authenticator.scss
@@ -1,11 +1,48 @@
 @import "../../index.scss";
 
 .authenticator {
-  height: 500px;
-  width: 800px;
-  background-color: $primary;
+  height: 100vh;
+  width: 100vw;
+  @include flexCenter(space-between, center, row);
+  @media (max-width: 820px) {
+    @include flexCenter(center, center, column);
+  }
+  & > * {
+    width: 100%;
+    height: 100%;
+  }
+  .background {
+    position: relative;
+    img {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+    }
+  }
 
-  button{
-    @include button($primary);
+  .form-box {
+    padding: 40px;
+    h1 {
+      font-weight: 500;
+      margin-bottom: 15px;
+    }
+    form {
+      width: 350px;
+      @media (max-width: 820px) {
+        width: 80%;
+      }
+      button {
+        @include button($primary);
+      }
+    }
+    p {
+      font-size: 16px;
+      line-height: 19px;
+      color: #616161;
+      span {
+        color: blueviolet;
+        cursor: pointer;
+      }
+    }
   }
 }
